# aios

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile  rust-toolchain.toml  skills-lock.json
.cargo/: config.toml
.claude/: settings.json
docs/: 00-architecture-overview.md  aios-agents.md  aios-airs.md  aios-architecture.md  aios-attention.md  aios-boot.md  aios-browser-architecture.md  aios-compositor.md  aios-context-engine.md  aios-experience.md  aios-flow.md  aios-identity.md  aios-ipc-syscalls.md  aios-memory.md  aios-networking.md  aios-posix.md  aios-preferences.md  aios-scheduler.md  aios-security.md  aios-spaces.md  aios-subsystem-framework.md  aios-ui-toolkit.md
docs/kernel/: boot.md  (+28 more)
kernel/: Cargo.toml  build.rs
kernel/src/: bench.rs  boot_phase.rs  dtb.rs  framebuffer.rs  main.rs  smp.rs
kernel/src/arch/aarch64/: boot.S  context_switch.S  exceptions.rs  gic.rs  linker.ld  mmu.rs  mod.rs  psci.rs  timer.rs  trap.rs  uart.rs
kernel/src/cap/: mod.rs
kernel/src/drivers/: mod.rs  virtio_blk.rs  virtio_common.rs  virtio_gpu.rs  virtio_input.rs
kernel/src/gpu/: mod.rs  service.rs  text.rs
kernel/src/input/: mod.rs
kernel/src/ipc/: channel.rs  direct.rs  mod.rs  notify.rs  select.rs  shmem.rs  tests.rs  timeout.rs
kernel/src/mm/: asid.rs  buddy.rs  bump.rs  frame.rs  heap.rs  init.rs  kaslr.rs  kmap.rs  mod.rs  pgtable.rs  pools.rs  slab.rs  tlb.rs  uspace.rs
kernel/src/observability/: metrics.rs  mod.rs  trace.rs
kernel/src/platform/: mod.rs  qemu.rs
kernel/src/sched/: init.rs  mod.rs  scheduler.rs
kernel/src/service/: mod.rs
kernel/src/storage/: block_engine.rs  budget.rs  crypto.rs  lsm.rs  mod.rs  object_store.rs  posix_bridge.rs  space.rs  version_store.rs  wal.rs
kernel/src/syscall/: mod.rs
kernel/src/task/: mod.rs  process.rs
scripts/: setup-dev-env.sh
shared/: Cargo.toml
uefi-stub/: Cargo.toml
(+525 files in other folders)
