[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
fdt-parser = "0.5"
sha2 = { version = "0.10", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }

[features]
default = ["kernel-metrics"]
kernel-metrics = []
kernel-tracing = []
