[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
fdt-parser = "0.5"
sha2 = { version = "0.10", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
spin = { version = "0.10", default-features = false, features = ["mutex", "spin_mutex"] }
lz4_flex = { version = "0.13", default-features = false, features = ["safe-encode", "safe-decode"] }

[features]
default = ["kernel-metrics", "storage-tests"]
kernel-metrics = []
kernel-tracing = []
storage-tests = []
